@@ -1,4 +1,4 @@
-$Id: INSTALL 93 2010-01-03 13:07:23Z gatty $
+$Id$
 
 Installing Multicat
 ===================
