@@ -1,4 +1,4 @@
-$Id: README 26 2009-10-20 18:44:22Z massiot $
+$Id$
 
 Welcome to Multicat!
 ====================
